Feature/posts (#3)
* Add post model & controller

* Add publish & update & delete post endpoints

* Support soft delete users

* Rename SoftDeletable module

* Add like feature

* Add reply post feature
